force-app/main/default/objects/Hazard_Source__mdt/Hazard_Source__mdt.object-meta.xml
<CustomObject>
    <description>Configurable public data source endpoints and risk thresholds for the flash-flood early-warning ingest.</description>
    <label>Hazard Source</label>
    <pluralLabel>Hazard Sources</pluralLabel>
</CustomObject>