force-app/main/default/objects/Hazard_Source__mdt/fields/Base_Path__c.field-meta.xml
<CustomField>
    <fullName>Base_Path__c</fullName>
    <description>Path/query template appended to the Named Credential endpoint. {minlat} {maxlat} {minlon} {maxlon} {start} tokens are substituted per region.</description>
    <label>Base Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>