force-app/main/default/objects/Hazard_Source__mdt/fields/Critical_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Critical_Threshold__c</fullName>
    <description>Risk score at/above which the signal is Critical.</description>
    <label>Critical Threshold</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>