force-app/main/default/objects/Hazard_Source__mdt/fields/High_Threshold__c.field-meta.xml
<CustomField>
    <fullName>High_Threshold__c</fullName>
    <description>Risk score at/above which the signal is High (but below Critical).</description>
    <label>High Threshold</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>