force-app/main/default/objects/Hazard_Source__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Named Credential API name used for the callout, e.g. USGS_API.</description>
    <label>Named Credential</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>