force-app/main/default/objects/Hazard_Source__mdt/fields/Source_Key__c.field-meta.xml
<CustomField>
    <fullName>Source_Key__c</fullName>
    <description>Logical key used by Apex to select the parser (USGS, GDACS, ML_PRECURSOR).</description>
    <label>Source Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>